Revert "Fix the properties toolbar at the top of the panel so it's always visible."
This reverts commit 6e42e48244a7dfa8d300cd5184a0986360370cab.

--- a/web/pgadmin/static/css/overrides.css
+++ b/web/pgadmin/static/css/overrides.css
@@ -16,7 +16,7 @@ body {
     width: 100% !important;
 }
 
-.pg-panel-content { position:absolute;top:0px;left:0px;right:0px;bottom:0px; overflow: hidden; }
+.pg-panel-content { position:absolute;top:0px;left:0px;right:0px;bottom:0px; }
 
 /* iFrames should have no border */
 iframe {
@@ -197,7 +197,6 @@ iframe {
 
 .obj_properties {
     padding: 0px;
-    overflow: hidden;
 }
 
 .obj_properties .pgadmin-control .uneditable-input {
@@ -383,9 +382,7 @@ iframe {
 }
 
 .has-pg-prop-btn-group {
-    top: 39px;
-    padding-top: 8px;
-    height: calc(100% - 40px);
+    top: 48px;
 }
 
 .pg-prop-content > div {
